[package]
name = "test-async-std-bug"
version = "0.1.0"
authors = ["Mikhail Svetov <svmk-tmsk@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = {version = "0.11", features = ["stream"]}
futures = "0.3"
async-std = "1.9"